# FerrideCore

./: Cargo.toml  README.md
src/: lib.rs
src/game/: bounding_box.rs  camera.rs  color.rs  entity.rs  game_event.rs  mod.rs  ressource_descriptor.rs  scene.rs  sprite_sheet.rs  velocity_controller.rs
src/graphics_provider/: buffer_primitives.rs  buffer_writer.rs  mod.rs  render_scene.rs  shader_descriptor.rs  surface.rs
src/graphics_provider/texture/: mod.rs
src/manager_application/: buffer.rs  event_manager.rs  mod.rs  window_descriptor.rs  window_manager.rs
